packages/yew-macro/tests/function_component_attr/bad-return-type-fail.stderr
error: function components must return `yew::Html`
 --> $DIR/bad-return-type-fail.rs:9:1
  |
9 | fn comp_1(_props: &Props) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/bad-return-type-fail.rs:13:5
   |
12 | fn comp(_props: &Props) -> u32 {
   |                            --- expected `VNode` because of return type
13 |     1
   |     ^ expected enum `VNode`, found integer
